--- a/writeup.Rmd
+++ b/writeup.Rmd
@@ -143,7 +143,7 @@ I decided to use my fallback here for visualization with R: rCharts.  If you are
 
 I went with a scatterplot:
 
-```{r, echo=FALSE, cache=T, results='asis', comment=NA}
+```{r, cache=T, results='asis', comment=NA}
 plot <- nPlot(grade ~ date, group =  'candidate', data = finalDF, 
               type = 'scatterChart', id = 'chart'
 )
